--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "armet",
   "version": "0.1.0",
   "description": "Clean and modern framework for creating RESTful APIs.",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "test": "gulp",
     "lint": "gulp lint",
@@ -27,5 +27,18 @@
     "gulp-load-plugins": "^1.0.0-rc.1",
     "gulp-mocha": "^2.1.2",
     "run-sequence": "^1.1.1"
+  },
+  "dependencies": {
+    "babel": "^5.6.7",
+    "babel-runtime": "^5.6.7",
+    "bardo": "^0.2.0",
+    "bluebird": "^2.9.30",
+    "bunyan": "^1.4.0",
+    "bunyan-prettystream": "^0.1.3",
+    "config": "^1.14.0",
+    "lodash": "^3.9.3",
+    "restify": "^3.0.3",
+    "sql-bricks-postgres": "^0.4.1",
+    "underscore.string": "^3.1.1"
   }
 }
