--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "bluebird": "^2.9.30",
     "bunyan": "^1.4.0",
     "bunyan-prettystream": "^0.1.3",
+    "callsite": "^1.0.0",
     "config": "^1.14.0",
+    "glob": "^5.0.10",
     "lodash": "^3.9.3",
     "restify": "^3.0.3",
     "sql-bricks-postgres": "^0.4.1",
