--- a/package.json
+++ b/package.json
@@ -23,9 +23,13 @@
     "babel-eslint": "^3.1.18",
     "gulp": "^3.9.0",
     "gulp-babel": "^5.1.0",
+    "gulp-bump": "^0.3.1",
     "gulp-eslint": "^0.14.0",
+    "gulp-git": "^1.2.4",
     "gulp-load-plugins": "^1.0.0-rc.1",
     "gulp-mocha": "^2.1.2",
+    "gulp-shell": "^0.4.2",
+    "gulp-tag-version": "^1.2.1",
     "run-sequence": "^1.1.1"
   },
   "dependencies": {
