--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "license": "MIT",
   "devDependencies": {
     "babel": "^5.6.7",
-    "babel-eslint": "^3.1.18",
+    "babel-eslint": "^3.1.23",
+    "eslint": "^0.24.0",
     "gulp": "^3.9.0",
     "gulp-babel": "^5.1.0",
     "gulp-bump": "^0.3.1",
