--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "run-sequence": "^1.1.1"
   },
   "dependencies": {
-    "babel": "^5.6.7",
     "babel-runtime": "^5.6.7",
     "bardo": "^0.4.0",
     "bluebird": "^2.9.30",
@@ -46,6 +45,7 @@
     "lodash": "^3.9.3",
     "restify": "^3.0.3",
     "seppuku": "^0.1.6",
+    "simple-bunyan": "^0.1.3",
     "sql-bricks-postgres": "^0.4.1",
     "underscore.string": "^3.1.1"
   }
