--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-mocha": "^2.1.2",
     "gulp-shell": "^0.4.2",
     "gulp-tag-version": "^1.2.1",
+    "gulp-watch": "^4.2.4",
     "run-sequence": "^1.1.1"
   },
   "dependencies": {
