--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "gulp-mocha": "^2.1.2",
     "gulp-shell": "^0.4.2",
     "gulp-tag-version": "^1.2.1",
-    "gulp-watch": "^4.2.4",
     "run-sequence": "^1.1.1"
   },
   "dependencies": {
@@ -44,8 +43,10 @@
     "config": "^1.14.0",
     "glob": "^5.0.10",
     "lodash": "^3.9.3",
+    "microtime": "^1.4.2",
     "restify": "^3.0.3",
     "seppuku": "^0.1.6",
+    "shortid": "^2.2.2",
     "simple-bunyan": "^0.1.3",
     "sql-bricks-postgres": "^0.4.1",
     "underscore.string": "^3.1.1"
