--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "babel": "^5.6.7",
     "babel-eslint": "^3.1.23",
+    "del": "^1.2.0",
     "eslint": "^0.24.0",
     "gulp": "^3.9.0",
     "gulp-babel": "^5.1.0",
