--- a/.babelrc
+++ b/.babelrc
@@ -1,20 +1,3 @@
 {
-  "plugins": [
-    // Syntax
-    "syntax-async-functions",
-    "syntax-async-generators",
-    "syntax-export-extensions",
-
-    // ES2015 (ES6+)
-    "transform-es2015-modules-commonjs",
-    "transform-es2015-parameters",
-    "transform-es2015-shorthand-properties",
-
-    // ES7+
-    "transform-async-to-generator",
-    "transform-export-extensions",
-
-    // Strict Mode
-    "transform-strict-mode"
-  ]
+  "presets": ["launchbadge-node"]
 }
