--- a/package.json
+++ b/package.json
@@ -18,91 +18,91 @@
   "author": "Ryan Leckey <ryan@launchbadge.com>",
   "license": "MIT",
   "devDependencies": {
-    "babel": "^6.1.18",
-    "babel-eslint": "^4.1.6",
-    "babel-plugin-syntax-async-functions": "^6.1.18",
-    "babel-plugin-syntax-async-generators": "^6.1.18",
-    "babel-plugin-syntax-class-constructor-call": "^6.1.18",
-    "babel-plugin-syntax-class-properties": "^6.1.18",
-    "babel-plugin-syntax-decorators": "^6.1.18",
-    "babel-plugin-syntax-do-expressions": "^6.1.18",
-    "babel-plugin-syntax-exponentiation-operator": "^6.1.18",
-    "babel-plugin-syntax-export-extensions": "^6.1.18",
-    "babel-plugin-syntax-flow": "^6.1.18",
-    "babel-plugin-syntax-function-bind": "^6.1.18",
-    "babel-plugin-syntax-jsx": "^6.1.18",
-    "babel-plugin-syntax-object-rest-spread": "^6.1.18",
-    "babel-plugin-syntax-trailing-function-commas": "^6.1.18",
-    "babel-plugin-transform-async-to-generator": "^6.1.18",
-    "babel-plugin-transform-class-constructor-call": "^6.1.18",
-    "babel-plugin-transform-class-properties": "^6.2.2",
-    "babel-plugin-transform-decorators": "^6.1.18",
-    "babel-plugin-transform-do-expressions": "^6.1.18",
-    "babel-plugin-transform-es2015-arrow-functions": "^6.1.18",
-    "babel-plugin-transform-es2015-block-scoped-functions": "^6.1.18",
-    "babel-plugin-transform-es2015-block-scoping": "^6.1.18",
-    "babel-plugin-transform-es2015-classes": "^6.2.2",
-    "babel-plugin-transform-es2015-computed-properties": "^6.1.18",
+    "babel": "^6.3.26",
+    "babel-eslint": "^5.0.0-beta8",
+    "babel-plugin-syntax-async-functions": "^6.3.13",
+    "babel-plugin-syntax-async-generators": "^6.3.13",
+    "babel-plugin-syntax-class-constructor-call": "^6.3.13",
+    "babel-plugin-syntax-class-properties": "^6.3.13",
+    "babel-plugin-syntax-decorators": "^6.3.13",
+    "babel-plugin-syntax-do-expressions": "^6.3.13",
+    "babel-plugin-syntax-exponentiation-operator": "^6.3.13",
+    "babel-plugin-syntax-export-extensions": "^6.3.13",
+    "babel-plugin-syntax-flow": "^6.3.13",
+    "babel-plugin-syntax-function-bind": "^6.3.13",
+    "babel-plugin-syntax-jsx": "^6.3.13",
+    "babel-plugin-syntax-object-rest-spread": "^6.3.13",
+    "babel-plugin-syntax-trailing-function-commas": "^6.3.13",
+    "babel-plugin-transform-async-to-generator": "^6.4.6",
+    "babel-plugin-transform-class-constructor-call": "^6.4.0",
+    "babel-plugin-transform-class-properties": "^6.4.0",
+    "babel-plugin-transform-decorators": "^6.4.0",
+    "babel-plugin-transform-do-expressions": "^6.3.13",
+    "babel-plugin-transform-es2015-arrow-functions": "^6.4.0",
+    "babel-plugin-transform-es2015-block-scoped-functions": "^6.3.13",
+    "babel-plugin-transform-es2015-block-scoping": "^6.4.0",
+    "babel-plugin-transform-es2015-classes": "^6.4.5",
+    "babel-plugin-transform-es2015-computed-properties": "^6.4.0",
     "babel-plugin-transform-es2015-constants": "^6.1.4",
-    "babel-plugin-transform-es2015-destructuring": "^6.1.18",
-    "babel-plugin-transform-es2015-for-of": "^6.1.18",
-    "babel-plugin-transform-es2015-function-name": "^6.1.18",
-    "babel-plugin-transform-es2015-literals": "^6.1.18",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.2.0",
-    "babel-plugin-transform-es2015-object-super": "^6.1.18",
-    "babel-plugin-transform-es2015-parameters": "^6.1.18",
-    "babel-plugin-transform-es2015-shorthand-properties": "^6.1.18",
-    "babel-plugin-transform-es2015-spread": "^6.1.18",
-    "babel-plugin-transform-es2015-sticky-regex": "^6.1.18",
-    "babel-plugin-transform-es2015-template-literals": "^6.1.18",
-    "babel-plugin-transform-es2015-typeof-symbol": "^6.1.18",
-    "babel-plugin-transform-es2015-unicode-regex": "^6.1.18",
-    "babel-plugin-transform-es3-member-expression-literals": "^6.1.18",
-    "babel-plugin-transform-es3-property-literals": "^6.1.18",
-    "babel-plugin-transform-es5-property-mutators": "^6.1.18",
-    "babel-plugin-transform-exponentiation-operator": "^6.1.18",
-    "babel-plugin-transform-export-extensions": "^6.1.18",
-    "babel-plugin-transform-flow-strip-types": "^6.1.18",
-    "babel-plugin-transform-function-bind": "^6.1.18",
-    "babel-plugin-transform-member-expression-literals": "^6.1.18",
-    "babel-plugin-transform-merge-sibling-variables": "^6.1.18",
-    "babel-plugin-transform-minify-booleans": "^6.1.18",
-    "babel-plugin-transform-object-rest-spread": "^6.1.18",
-    "babel-plugin-transform-property-literals": "^6.1.18",
-    "babel-plugin-transform-remove-console": "^6.1.18",
-    "babel-plugin-transform-remove-debugger": "^6.1.18",
-    "babel-plugin-transform-runtime": "^6.1.18",
-    "babel-plugin-transform-strict-mode": "^6.2.0",
-    "babel-plugin-transform-undefined-to-void": "^6.1.18",
-    "babel-plugin-typecheck": "^3.5.0",
+    "babel-plugin-transform-es2015-destructuring": "^6.4.0",
+    "babel-plugin-transform-es2015-for-of": "^6.3.13",
+    "babel-plugin-transform-es2015-function-name": "^6.4.0",
+    "babel-plugin-transform-es2015-literals": "^6.3.13",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.4.5",
+    "babel-plugin-transform-es2015-object-super": "^6.4.0",
+    "babel-plugin-transform-es2015-parameters": "^6.4.5",
+    "babel-plugin-transform-es2015-shorthand-properties": "^6.3.13",
+    "babel-plugin-transform-es2015-spread": "^6.4.0",
+    "babel-plugin-transform-es2015-sticky-regex": "^6.3.13",
+    "babel-plugin-transform-es2015-template-literals": "^6.3.13",
+    "babel-plugin-transform-es2015-typeof-symbol": "^6.4.3",
+    "babel-plugin-transform-es2015-unicode-regex": "^6.4.3",
+    "babel-plugin-transform-es3-member-expression-literals": "^6.3.13",
+    "babel-plugin-transform-es3-property-literals": "^6.3.13",
+    "babel-plugin-transform-es5-property-mutators": "^6.3.13",
+    "babel-plugin-transform-exponentiation-operator": "^6.3.13",
+    "babel-plugin-transform-export-extensions": "^6.4.0",
+    "babel-plugin-transform-flow-strip-types": "^6.4.0",
+    "babel-plugin-transform-function-bind": "^6.3.13",
+    "babel-plugin-transform-member-expression-literals": "^6.3.13",
+    "babel-plugin-transform-merge-sibling-variables": "^6.3.13",
+    "babel-plugin-transform-minify-booleans": "^6.3.13",
+    "babel-plugin-transform-object-rest-spread": "^6.3.13",
+    "babel-plugin-transform-property-literals": "^6.3.13",
+    "babel-plugin-transform-remove-console": "^6.3.13",
+    "babel-plugin-transform-remove-debugger": "^6.3.13",
+    "babel-plugin-transform-runtime": "^6.4.3",
+    "babel-plugin-transform-strict-mode": "^6.3.13",
+    "babel-plugin-transform-undefined-to-void": "^6.3.13",
+    "babel-plugin-typecheck": "^3.6.1",
     "babel-preset-launchbadge-node": "git://github.com/launchbadge/babel-preset-launchbadge-node.git",
     "del": "^2.2.0",
-    "eslint": "^1.10.1",
+    "eslint": "^1.10.3",
     "gulp": "^3.9.0",
-    "gulp-babel": "^6.1.0",
+    "gulp-babel": "^6.1.2",
     "gulp-bump": "^1.0.0",
     "gulp-eslint": "^1.1.1",
-    "gulp-git": "^1.2.4",
-    "gulp-gzip": "^1.1.0",
-    "gulp-load-plugins": "^1.0.0-rc.1",
-    "gulp-mocha": "^2.1.2",
-    "gulp-shell": "^0.5.1",
-    "gulp-tag-version": "^1.2.1",
-    "gulp-tar": "^1.7.0",
-    "run-sequence": "^1.1.1"
+    "gulp-git": "^1.7.0",
+    "gulp-gzip": "^1.2.0",
+    "gulp-load-plugins": "^1.2.0",
+    "gulp-mocha": "^2.2.0",
+    "gulp-shell": "^0.5.2",
+    "gulp-tag-version": "^1.3.0",
+    "gulp-tar": "^1.8.0",
+    "run-sequence": "^1.1.5"
   },
   "dependencies": {
     "bardo": "^0.9.1",
     "bunyan": "^1.5.1",
     "bunyan-prettystream": "^0.1.3",
     "callsite": "^1.0.0",
-    "config": "^1.17.1",
-    "glob": "^6.0.1",
-    "lodash": "^3.10.1",
+    "config": "^1.19.0",
+    "glob": "^6.0.4",
+    "lodash": "^4.1.0",
     "microtime": "^2.0.0",
     "restify": "^4.0.3",
     "shortid": "^2.2.4",
     "simple-bunyan": "^0.2.0",
-    "sql-bricks-postgres": "^0.4.1"
+    "sql-bricks-postgres": "^0.4.2"
   }
 }
